# Borderless-Window-Utility

./: .gitignore  README.md  main.py  main_headless.py  presets.ini  pyproject.toml  requirements.txt  run-apply-and-exit.bat  run.bat  setup_once.bat
.github/workflows/: python-build-publish.yml
borderless_window_utility/: __init__.py  cli.py  core.py  textual_app.py
tools/: build.bat  create_venv.bat
