[project]
name = "borderless-window-utility"
version = "3.0.0"
description = "Utility to toggle borderless window mode and resize positions on Windows."
readme = "README.md"
requires-python = ">=3.12"

# Runtime dependencies
dependencies = [
    "pywin32==311",
    "textual>=8.2.7",
]

[project.scripts]
borderless-window-utility = "borderless_window_utility.cli:main"
borderless-window-utility-headless = "borderless_window_utility.cli:headless_main"

[dependency-groups]
dev = [
    "ruff~=0.12.10",
    "ty~=0.0.44",
    "pyinstaller~=6.15.0",
]

[tool.ruff]
line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
